# kahl

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Containerfile.build  LICENSE  README.md  VERSION  benchmark.sh  build-all.sh  build-container.sh  build-linux.sh  build.rs  build.sh  bump-version.sh  claude-shell-prefix  clean.sh  generate.sh  prebuild.sh  release.sh  test.sh
.github/: secret_scanning.yml
bash/: secrets-filter
bun/: generate.ts  main.js  package.json  patterns_gen.ts  secrets-filter
gawk/: secrets-filter
go/: generate.go  kahl  main.go  patterns_gen.go  secrets-filter  secrets-filter.go
patterns/: README.md  entropy.yaml  env.yaml  patterns.yaml
perl/: Patterns.pm  generate.pl  kahl  main.pl  secrets-filter
python/: generate.py  kahl-standalone  main.py  patterns_gen.py  pyproject.toml  secrets-filter  secrets-filter-standalone
ruby/: generate.rb  main.rb  patterns_gen.rb  secrets-filter
rust/: Cargo.toml  generate.sh  kahl  secrets-filter
rust/src/: main.rs  patterns_gen.rs
src/: main.rs  patterns_gen.rs
swift/: generate.swift  main.swift  patterns_gen.swift  secrets-filter  version_gen.swift
tests/: PLAN.md  bench.sh  benchmark-results.csv  generate-expected.sh  test.sh  test_secrets_filter.py
tests/corpus/: generate-corpus.sh
tests/corpus/logs/: app-logs.txt  ci-output.txt  combined.txt  git-operations.txt
tests/expected/combined/: all-with-entropy.txt  mixed.txt
tests/expected/entropy/: charsets.txt  exclusions.txt  high-entropy.txt  lengths.txt  thresholds.txt
tests/expected/passthrough/: patterns-valuesonly-cloud.txt  patterns-valuesonly-edge-boundaries.txt  patterns-valuesonly-edge-long-lines.txt  patterns-valuesonly-edge-partial.txt  patterns-valuesonly-edge-private-key-consecutive.txt  patterns-valuesonly-edge-secrets-adjacent.txt  patterns-valuesonly-new-azure.txt  patterns-valuesonly-new-social.txt  patterns-valuesonly-payment.txt  patterns-valuesonly-private-keys.txt  values-patternsonly-env-values.txt  values-patternsonly-short-values.txt
tests/expected/patterns/: boundaries.txt  cloud.txt  context.txt  edge-boundaries.txt  edge-long-lines.txt  edge-partial.txt  edge-private-key-consecutive.txt  edge-private-key-formats.txt  edge-private-key-malformed.txt  edge-secrets-adjacent.txt  edge-unicode.txt  edge-whitespace.txt  github.txt  gitlab.txt  (+14 more)
tests/fixtures/: env.yaml
tests/lib/: helpers.sh
(+30 files in other folders)
