[package]
name = "kahl"
version = "0.0.0"  # Actual version from git describe via build.rs
edition = "2024"
description = "Stream filter for secret redaction"
repository = "https://git.zib.de/tools/kahl"
license = "GPL-3.0-or-later"
keywords = ["security", "secrets", "filter", "redaction", "cli"]
categories = ["command-line-utilities"]
authors = ["Christoph Spiegel"]

[dependencies]
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl"] }

[package.metadata]
tools-release = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
