[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kahl"
version = "0.1.0"
description = "Stream filter for secret redaction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Christoph Spiegel"}]
keywords = ["security", "secrets", "filter", "redaction", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://git.zib.de/cspiegel/kahl"
Repository = "https://git.zib.de/cspiegel/kahl"

[project.scripts]
kahl = "kahl:main"

[tool.setuptools]
py-modules = ["kahl"]
